--- a/module-main/pom.xml
+++ b/module-main/pom.xml
@@ -3,14 +3,14 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.apache.httpcomponents</groupId>
-    <artifactId>jakarta-httpcore-pom</artifactId>
+    <artifactId>httpcore</artifactId>
     <version>4.0-alpha3-SNAPSHOT</version>
   </parent>
   <artifactId>jakarta-httpcore</artifactId>
   <name>HttpCore (base module)</name>
   <inceptionYear>2005</inceptionYear>
   <description>
-   Core HTTP components (Java 1.3 compatible)
+   HttpComponents Core (Java 1.3 compatible)
   </description>
   <url>http://jakarta.apache.org/httpcomponents/httpcore</url>
   <packaging>jar</packaging>  
@@ -38,16 +38,23 @@
     </dependency>
   </dependencies>
 
+  <properties>
+    <maven.compile.source>1.3</maven.compile.source>
+    <maven.compile.target>1.3</maven.compile.target>
+    <maven.compile.optimize>true</maven.compile.optimize>
+    <maven.compile.deprecation>true</maven.compile.deprecation>
+  </properties>
+
   <build>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <configuration>
-          <source>1.3</source>
-          <target>1.3</target>
-          <optimize>true</optimize>
-          <showDeprecations>true</showDeprecations>
+          <source>${maven.compile.source}</source>
+          <target>${maven.compile.target}</target>
+          <optimize>${maven.compile.optimize}</optimize>
+          <showDeprecations>${maven.compile.deprecation}</showDeprecations>
         </configuration>
       </plugin>
       <plugin>
