--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?><project>
+<?xml version="1.0" encoding="UTF-8"?><project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <parent>
     <artifactId>project</artifactId>
     <groupId>org.apache.httpcomponents</groupId>
@@ -8,7 +8,7 @@
   <groupId>org.apache.httpcomponents</groupId>
   <artifactId>httpcore</artifactId>
   <name>HttpComponents Core</name>
-  <version>4.0-alpha3-SNAPSHOT</version>
+  <version>4.0-alpha4-SNAPSHOT</version>
   <description>Core components to build HTTP enabled services</description>
   <url>http://jakarta.apache.org/httpcomponents/httpcore</url>
   <inceptionYear>2005</inceptionYear>
