Maven project and clover report definitions fixed (or so I'd like to hope)
git-svn-id: https://svn.apache.org/repos/asf/jakarta/httpcomponents/httpcore/trunk@483421 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -71,23 +71,43 @@
 
   <reporting>
     <plugins>
+
+       <plugin>
+         <groupId>org.apache.maven.plugins</groupId>
+         <artifactId>maven-project-info-reports-plugin</artifactId>
+         <reportSets>
+           <reportSet>
+             <reports>
+               <report>project-team</report>
+               <report>mailing-list</report>
+               <report>issue-tracking</report>
+               <report>scm</report>
+             </reports>
+           </reportSet>
+         </reportSets>
+      </plugin>
+
       <plugin>
         <artifactId>maven-clover-plugin</artifactId>
         <configuration>
-          <licenseFile>${clover.license}</licenseFile>
+          <licenseLocation>${clover.license}</licenseLocation>
         </configuration>
       </plugin>
+
       <plugin>
         <artifactId>maven-javadoc-plugin</artifactId>
       </plugin>
+
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>jxr-maven-plugin</artifactId>
       </plugin>
+
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>surefire-report-maven-plugin</artifactId>
       </plugin>
+
     </plugins>
   </reporting>
 
