--- a/module-nio/pom.xml
+++ b/module-nio/pom.xml
@@ -73,4 +73,24 @@
     </plugins>
   </build>
 
+  <reporting>
+    <plugins>
+
+       <plugin>
+         <groupId>org.apache.maven.plugins</groupId>
+         <artifactId>maven-project-info-reports-plugin</artifactId>
+         <reportSets>
+           <reportSet>
+             <reports>
+               <report>dependencies</report>
+               <report>issue-tracking</report>
+               <report>scm</report>
+             </reports>
+           </reportSet>
+         </reportSets>
+      </plugin>
+
+    </plugins>
+  </reporting>
+
 </project>
