added encoding UTF-8 to <javac> tasks
git-svn-id: https://svn.apache.org/repos/asf/jakarta/httpcomponents/httpcore/trunk@486191 13f79535-47bb-0310-9956-ffa450edef68

--- a/module-main/build.xml
+++ b/module-main/build.xml
@@ -133,6 +133,7 @@ Output
                debug       ="${compile.debug}"
                deprecation ="${compile.deprecation}"
                optimize    ="${compile.optimize}"
+               encoding    ="UTF-8"
                source      ="${compile.core.main.source}"
                target      ="${compile.core.main.target}"
                sourcepath  =""
@@ -154,6 +155,7 @@ Output
                debug       ="${compile.debug}"
                deprecation ="${compile.deprecation}"
                optimize    ="${compile.optimize}"
+               encoding    ="UTF-8"
                source      ="${compile.core.main.source}"
                target      ="${compile.core.main.target}"
                sourcepath  =""
@@ -181,6 +183,7 @@ Output
                debug       ="${compile.debug}"
                deprecation ="${compile.deprecation}"
                optimize    ="${compile.optimize}"
+               encoding    ="UTF-8"
                source      ="${compile.source}"
                target      ="${compile.target}"
                sourcepath  =""
@@ -204,6 +207,7 @@ Output
                debug       ="${compile.debug}"
                deprecation ="${compile.deprecation}"
                optimize    ="${compile.optimize}"
+               encoding    ="UTF-8"
                source      ="${compile.source}"
                target      ="${compile.target}"
                sourcepath  =""
@@ -239,6 +243,7 @@ Output
                debug       ="${compile.debug}"
                deprecation ="${compile.deprecation}"
                optimize    ="${compile.optimize}"
+               encoding    ="UTF-8"
                source      ="${compile.source}"
                target      ="${compile.target}"
                sourcepath  =""
@@ -275,6 +280,7 @@ Output
                debug       ="${compile.debug}"
                deprecation ="${compile.deprecation}"
                optimize    ="${compile.optimize}"
+               encoding    ="UTF-8"
                source      ="${compile.source}"
                target      ="${compile.target}"
                sourcepath  =""
