--- a/module-nio/build.xml
+++ b/module-nio/build.xml
@@ -115,6 +115,7 @@ Output
                debug       ="${compile.debug}"
                deprecation ="${compile.deprecation}"
                optimize    ="${compile.optimize}"
+               encoding    ="UTF-8"
                source      ="${compile.source}"
                target      ="${compile.target}"
                sourcepath  =""
@@ -139,6 +140,7 @@ Output
                debug       ="${compile.debug}"
                deprecation ="${compile.deprecation}"
                optimize    ="${compile.optimize}"
+               encoding    ="UTF-8"
                source      ="${compile.source}"
                target      ="${compile.target}"
                sourcepath  =""
@@ -167,6 +169,7 @@ Output
                debug       ="${compile.debug}"
                deprecation ="${compile.deprecation}"
                optimize    ="${compile.optimize}"
+               encoding    ="UTF-8"
                source      ="${compile.source}"
                target      ="${compile.target}"
                sourcepath  =""
