moved DefaultHttpParams to .params. package
git-svn-id: https://svn.apache.org/repos/asf/jakarta/httpcomponents/httpcore/trunk@502680 13f79535-47bb-0310-9956-ffa450edef68

--- a/module-nio/build.xml
+++ b/module-nio/build.xml
@@ -194,7 +194,7 @@ Output
         </javac>
 </target>
 <target name="clean-examples">
-	<delete dir="${build.core.main.xmpls}" quiet="true" />
+	<delete dir="${build.core.nio.xmpls}" quiet="true" />
 </target>
 
 
