moved nio.concurrent to util.concurrent
git-svn-id: https://svn.apache.org/repos/asf/jakarta/httpcomponents/httpcore/trunk@503405 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -299,12 +299,8 @@ Output
             <package name="org.apache.http.message" />
             <package name="org.apache.http.params" />
             <package name="org.apache.http.protocol" />
-            <package name="org.apache.http.util" />
-            <package name="org.apache.http.nio" />
-            <package name="org.apache.http.nio.concurrent" />
-            <package name="org.apache.http.nio.params" />
-            <package name="org.apache.http.nio.protocol" />
-            <package name="org.apache.http.nio.reactor" />
+            <package name="org.apache.http.util*" />
+            <package name="org.apache.http.nio*" />
           </group>
           <group title="Implementation">
             <package name="org.apache.http.impl*" />
@@ -351,12 +347,8 @@ Output
             <package name="org.apache.http.message" />
             <package name="org.apache.http.params" />
             <package name="org.apache.http.protocol" />
-            <package name="org.apache.http.util" />
-            <package name="org.apache.http.nio" />
-            <package name="org.apache.http.nio.concurrent" />
-            <package name="org.apache.http.nio.params" />
-            <package name="org.apache.http.nio.protocol" />
-            <package name="org.apache.http.nio.reactor" />
+            <package name="org.apache.http.util*" />
+            <package name="org.apache.http.nio*" />
           </group>
           <group title="Implementation">
             <package name="org.apache.http.impl*" />
