Initial commit of the NIO SSL extensions
git-svn-id: https://svn.apache.org/repos/asf/jakarta/httpcomponents/httpcore/trunk@505797 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,7 @@
   <modules>
     <module>module-main</module>
     <module>module-nio</module>
+    <module>module-niossl</module>
   </modules>
 
   <build>
